Structure models setting in slate info after lates slate module

--- a/generators/twig/templates/ComponentName.html.twig
+++ b/generators/twig/templates/ComponentName.html.twig
@@ -1,6 +1,6 @@
 {# slate
   name = <%= ComponentName %>
-  models[<%= entityType %>] = entity:<%= entityType %><% if (useViewMode) { %>
+  models[<%= bundle %>] = entity:<%= entityType %><% if (useViewMode) { %>
   view_mode[<%= entityType %>][<%= bundle %>] = <%= viewMode %><% } %>
 #}
 
